<resources>
    <string name="app_name">FacebbookApp2</string>
    <string name="unblast">Unblast</string>
    <string name="_2_hrs">2 hrs.</string>
    <string name="buckle_up_because_change_is_coming_to_wordpress_http_unblast_com_color_schemes">Buckle up, because change is coming to WordPress http://unblast.com/color-schemes</string>
    <string name="_1_share">1 share</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="facebook">facebook</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
    <string name="help_center">Help Center</string>
</resources>
